侧边栏菜单调整完毕

--- a/src/main/resources/static/src/views/layout.html
+++ b/src/main/resources/static/src/views/layout.html
@@ -82,7 +82,7 @@
         </ul>
     </div>
 
-    <!-- 侧边菜单 -->
+    <!-- 侧边栏菜单 -->
     <div class="layui-side layui-side-menu">
         <div class="layui-side-scroll">
             <div class="layui-logo">
@@ -91,16 +91,22 @@
 
             <ul class="layui-nav layui-nav-tree layui-nav-side">
                 <li class="layui-nav-item layui-nav-itemed">
-                    <a href="#">权限管理</a>
+                    <a href="#" lay-tips="权限管理" lay-direction="2">
+                        <i class="layui-icon layui-icon-home"></i>
+                        <cite>权限管理</cite>
+                    </a>
                     <dl class="layui-nav-child">
-                        <dd><a href="#">用户管理</a></dd>
-                        <dd><a href="#">角色管理</a></dd>
-                        <dd><a href="#">功能管理</a></dd>
-                        <dd><a href="#">#构管理</a></dd>
+                        <dd><a href="#">用户权限</a></dd>
+                        <dd><a href="#">角色权限</a></dd>
+                        <dd><a href="#">功能权限</a></dd>
+                        <dd><a href="#">组织机构</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="javascript:;">系统设置</a>
+                    <a href="#" lay-tips="系统设置" lay-direction="2">
+                        <i class="layui-icon layui-icon-set"></i>
+                        <cite>系统设置</cite>
+                    </a>
                     <dl class="layui-nav-child">
                         <dd><a href="#">设置1</a></dd>
                         <dd><a href="#">设置2</a></dd>
